# carma

./: .clang-format  .clangd  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakeLists_bu.txt  README.md  README.rst  carma_config.cmake  mbuild.sh
.github/workflows/: asan.yml  coverage.yml  dependencies.yml  install_test.yml  linux.yml  macos.yml  mre.yml  test_matrix.yml  test_matrix_small.yml  test_numpy.yml  valgrind.yml  windows.yml
.travis-ci/: after_success.sh  before_install.sh  before_script.sh  configure.sh  install.sh  load_env.sh  make_and_run.sh
carmanumpy/: carmanumpy.h
cmake/: BuildType.cmake  ClangFormatProcess.cmake  ClangFormatTarget.cmake  ClearOptions.cmake  CoverageTarget.cmake  GetArmadillo.cmake  GetCarma.cmake  GetCatch2.cmake  GetPybind11.cmake  ParseOptions.cmake  ReleaseSettings.cmake  TestTargets.cmake  ThirdPartyTargets.cmake  carmaConfig.cmake.in  carmaDependencyTargets.cmake
cnalloc/include/: cnalloc.hpp
docs/: requirements.txt
docs/source/: basic_examples.rst  basic_usage.rst  building.rst  carma.rst  conf.py  configuration.rst  examples.rst  index.rst  introduction.rst  memory_management.rst  versions.rst
examples/: CMakeLists.txt  arraystore.cpp  arraystore.h  automatic_conversion.h  carma_examples.py  example.cpp  example_bindings.cpp  manual_conversion.cpp  manual_conversion.h  ols.cpp  ols.h
include/: carma  carma.hpp
include/armadillo/: CMakeLists.txt  README.md  version.txt
include/carma/: carma.h  nparray.h  utils.h
include/carma/carma/: armatonumpy.h  arraystore.h  cnumpy.h  converters.h  nparray.h  numpyapi.h  numpytoarma.h  utils.h
include/carma_bits/: armatonumpy.h  array_view.hpp  arraystore.h  cnalloc.h  cnalloc.hpp  cnumpy.h  common.hpp  config.h  config.h.in  config.hpp  converter_types.hpp  converters.h  converters.hpp  debug.h  exceptions.h  nparray.h  nptoarma.hpp  numpy.hpp  numpy_alloc.hpp  numpy_api.hpp  numpyapi.h  numpytoarma.h  to_arma.hpp  to_numpy.hpp  type_traits.hpp  typecheck.h  utils.h  version.hpp
include/carma_bits/base/: arma_converters.hpp  config.hpp  converter_types.hpp  converters.hpp  numpy_converters.hpp
include/carma_bits/extension/: config.hpp  converter_types.hpp  converters.hpp  numpy_alloc.hpp  numpy_container.hpp  numpy_converters.hpp
include/carma_bits/internal/: arma_container.hpp  arma_converters.hpp  common.hpp  converter_types.hpp  numpy_api.hpp  numpy_container.hpp  numpy_converters.hpp  outconv.hpp  type_traits.hpp
integration_test/: CMakeLists.txt  README.md
integration_test/src/: integration_test.cpp  integration_test.h
integration_test/tests/: integration_test.py
lci/: Dockerfile  carma_valgrind.sh
mre/: CMakeLists.txt  mre.cpp  mre.h  pymod_test.py
src/: main.cpp
tests/: CMakeLists.txt  test_arma_conv.py  test_arr_to_mat.py  test_arraystore.py  test_loading.py  test_mat_to_arr.py  test_nparray.py  test_roundtrip.py  test_type_caster.py
tests/include/carma/: carma.h  nparray.h  utils.h
tests/src/: bindings.cpp  test_arr_to_mat.cpp  test_arr_to_mat.h  test_arr_to_mat_native.cpp  test_arraystore.cpp  test_arraystore.h  test_arraystore_native.cpp  test_converters.cpp  test_converters.h  test_main.cpp  test_mat_to_arr.cpp  test_mat_to_arr.h  test_mat_to_arr_native.cpp  test_native_arr_to_mat.cpp  test_native_arraystore.cpp  test_native_mat_to_arr.cpp  test_native_roundtrip.cpp  test_nparray.cpp  test_nparray.h  test_roundtrip.cpp  test_roundtrip.h  test_store.cpp  test_store.h  test_type_caster.cpp  test_type_caster.h
